Fix alignment of fact posted by box on show fact page

--- a/app/assets/stylesheets/facts/_show.scss
+++ b/app/assets/stylesheets/facts/_show.scss
@@ -7,7 +7,7 @@
 }
 
 .fact-favorite-text {
-  padding-left: 10px;
+  padding-left: 230px;
   display: table;
   margin-bottom: 30px;
   font-size: 0.9em;
